<resources>
    <string name="app_name">漫游者日记</string>
    <string name="diary">日记</string>
    <string name="home_page">主页</string>
    <string name="settings">设置</string>
    <string name="btn_add">添加按钮</string>
    <string name="date">日期</string>
    <string name="paragraph">段落</string>
    <string name="diary_content">日记内容</string>
    <string name="diary_read_search_hint">搜索日记内容……</string>
    <string name="diary_paragraph">日记段落</string>
    <string name="date_time">日期和时间</string>
    <string name="send_btn">发送按钮</string>
    <string name="close_btn">关闭按钮</string>
    <string name="origin_text">原始文本</string>
    <string name="modify_content">修改内容</string>
    <string name="modify_time">修改时间</string>
    <string name="write_diary">写日记</string>
    <string name="theme_mode">主题模式</string>
    <string name="dynamic_color">动态配色</string>
    <string name="diary_count">日记数量</string>
    <string name="paragraph_count">段落数量</string>
    <string name="start_date">日记开始日期</string>
    <string name="date_difference_to_today">距今天数</string>
    <string name="authentication">身份验证</string>
    <string name="hide_recent_task">最近任务隐藏</string>
    <string name="authentication_opportunity">身份验证时机</string>
    <string name="progressing">正在处理……</string>
    <string name="progress_0">0/0 (0%)</string>
    <string name="data_manage">数据管理</string>
    <string name="export_data">导出数据</string>
    <string name="import_data">导入数据</string>
    <string name="append_paragraph">段落追加</string>
    <string name="import_diary">导入日记</string>
    <string name="no_diary">无日记</string>
    <string name="no_paragraph">无段落</string>
    <string name="about_software">关于软件</string>
    <string name="app_description">这是一款Material You风格的本地日记APP，界面清爽，功能纯粹，让您随时随地都能记录生活中的点滴。</string>
    <string name="author_name">E_zhiyu</string>
    <string name="author_of_app">软件创作者</string>
    <string name="right_arrow_of_tag_card">右侧箭头</string>
    <string name="project_address">项目地址</string>
    <string name="click_skip_to_repository">点击跳转至项目仓库</string>
    <string name="emotion_tag">情绪标签</string>
    <string name="modify_date">修改日期</string>
    <string name="name">名称</string>
    <string name="description">描述</string>
    <string name="no_emotion_tag">无情绪标签</string>
    <string name="add_emotion_tag">新建情绪标签</string>
    <string name="emotion_tag_name_helper">情绪标签的名称</string>
    <string name="emotion_tag_description_helper">对该情绪做一个简要的描述</string>
    <string name="modify_emotion_tag">修改情绪标签</string>
    <string name="delete">删除</string>
    <string name="select_emotion_tag">选择情绪标签</string>
    <string name="slide_to_change_degree_of_emotion">滑动调整强烈程度</string>
    <string name="diary_statistics">日记统计</string>
    <string name="diary_continuous_count">连续记日记天数</string>
    <string name="max_diary_continuous">最大连续天数</string>
    <string name="date_skip_btn">日期跳转按钮</string>
    <string name="emotion_type">情绪类型</string>
    <string name="emotion_type_helper">该情绪的大致类别</string>
    <string name="add_media_files">添加媒体文件</string>
    <string name="add_picture_via_camera">使用相机拍照</string>
    <string name="add_picture_via_album">从相册中添加</string>
    <string name="btn_add_media_files">添加媒体文件的按钮</string>
    <string name="preview_of_media_file">媒体文件预览</string>
    <string name="btn_delete_media">删除媒体按钮</string>
    <string name="btn_save">保存按钮</string>
    <string name="less">少</string>
    <string name="more">多</string>
    <string name="tuesday">周二</string>
    <string name="saturday">周六</string>
    <string name="thursday">周四</string>
    <string name="infinity">∞</string>
    <string name="not_applicable">N/A</string>
    <string name="max_character_count">最大日记长度</string>
    <string name="average_character_count">平均日记长度</string>
    <string name="btn_up">向上滚动按钮</string>
    <string name="btn_down">向下滚动的按钮</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="filter_diary_paragraph">筛选日记段落</string>
    <string name="clear_filter">清除筛选</string>
    <string name="changelog">更新日志</string>
    <string name="permissions_setting">权限设置</string>
    <string name="camera_permission">相机权限</string>
    <string name="notification_permission">通知权限</string>
    <string name="alarm_permission">精确闹钟权限</string>
    <string name="diary_alarm">日记提醒</string>
    <string name="alarm_time">提醒时间</string>
    <string name="total_switch">总开关</string>
    <string name="add_alarm_time">添加提醒时间</string>
    <string name="share_preview">分享预览</string>
    <string name="share_diary">分享日记</string>
    <string name="btn_share">分享按钮</string>
    <string name="btn_share_diary">日记分享按钮</string>
    <string name="share_as_image">分享为图片</string>
    <string name="save_to_album">保存到相册</string>
    <string name="auto_start_permission">自启动权限</string>
    <string name="others">其他</string>
    <string name="include_media">包含媒体</string>
    <string name="skip_date">日期跳转</string>
    <string name="role">角色</string>
    <string name="role_search_hint">搜索角色信息……</string>
    <string name="no_role">无角色</string>
    <string name="add_role">新建角色</string>
    <string name="identity">身份</string>
    <string name="role_name_helper">该角色的通用称呼，建议填正式称呼</string>
    <string name="role_identity_helper">该角色相对于您的身份描述（如：同学、老师）</string>
    <string name="impression">印象</string>
    <string name="role_impression_helper">您对该角色的印象和评价</string>
    <string name="role_relationship_helper">您与该角色的关系好坏程度</string>
    <string name="role_alia">角色别名</string>
    <string name="modify_role">修改角色</string>
    <string name="select_role">选择角色</string>
    <string name="ignore_battery_optimization">忽略电池优化</string>
    <string name="copy_paragraph">复制段落内容</string>
    <string name="check_diary">查看日记</string>
    <string name="not_included">未包含</string>
    <string name="confirm_btn">确认按钮</string>
    <string name="icon_of_auth">身份验证图标</string>
    <string name="click_to_auth">点击屏幕进行身份验证</string>
    <string name="multi_word_search_and">多词搜索：同时出现</string>
    <string name="multi_word_search_or">多词搜索：出现任意一个</string>
    <string name="display_name">显示名称</string>
    <string name="role_display_name_helper">角色显示在段落和选择列表中的名称，留空则显示角色名称</string>
    <string name="common_role_top_5">常用角色(前5个)</string>
    <string name="role_statistics">角色统计</string>
    <string name="role_relationship">角色关系</string>
    <string name="common_emotion_tag_top_5">常用情绪标签(前5个)</string>
    <string name="emotion_statistics">情绪标签统计</string>
    <string name="used_emotion_tag_type">使用过的情绪标签种类</string>
    <string name="app_settings">应用设置</string>
    <string name="common_settings">通用设置</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="share_settings">分享设置</string>
    <string name="share_content">分享内容</string>
    <string name="share_picture_bottom_text">分享图片底部文本</string>
    <string name="paragraph_time">段落时间</string>
    <string name="common_role">常用角色</string>
    <string name="life_note">人生笔记</string>
    <string name="life_note_search_hint">搜索人生笔记……</string>
    <string name="no_life_note">无人生笔记</string>
    <string name="life_note_insight">洞见</string>
    <string name="life_note_elaboration">阐述</string>
    <string name="add_life_note">新建人生笔记</string>
    <string name="modify_life_note">修改人生笔记</string>
    <string name="life_note_insight_helper">用一句简练的话概括您的深刻见解</string>
    <string name="life_note_elaboration_helper">将您的洞见用通俗的话讲解一遍</string>
    <string name="modify_history_record">修改历史记录</string>
    <string name="time">时间</string>
    <string name="auto_backup">自动备份</string>
    <string name="backup_frequency">备份频率</string>
    <string name="backup_directory">备份目录</string>
    <string name="get_help">获取帮助</string>
    <string name="delete_paragraph">删除段落</string>
    <string name="delete_emotion_tag">删除情绪标签</string>
    <string name="delete_diary">删除日记</string>
    <string name="delete_role">删除角色</string>
    <string name="btn_of_explanation">功能说明按钮</string>
    <string name="update_check">检测更新</string>
    <string name="select_first_screen">启动页选择</string>
    <string name="HDR">HDR</string>
    <string name="media_settings">媒体设置</string>
    <string name="hdr_display_effect">HDR显示效果</string>
    <string name="media_list">媒体列表</string>
    <string name="no_media">无媒体</string>
    <string name="order_by_time">按时间排序</string>
    <string name="order_by_size">按大小排序</string>
    <string name="order_by_name">按名称排序</string>
    <string name="from_small_to_large">从小到大</string>
    <string name="from_large_to_small">从大到小</string>
    <string name="auto_update_check">自动更新检测</string>
    <string name="compress">压缩</string>
    <string name="media_info">媒体详情</string>
    <string name="time_with_colon">时间：</string>
    <string name="file_info">文件信息：</string>
    <string name="media_param_info">媒体参数：</string>
    <string name="read_diary">看日记</string>
    <string name="show_or_hide_private_paragraph">显示/隐藏隐私段落</string>
    <string name="switch_privacy_type">切换隐私类别</string>
    <string name="privacy_type_color_block">隐私类别色块</string>
    <string name="btn_of_date_select">日期选择按钮</string>
    <string name="btn_of_show_or_hide_private_paragraph">隐私段落显示或隐藏按钮</string>
    <string name="troubleshooting">问题解答</string>
    <string name="help_solve_some_common_problems">帮助解决一些常见的问题</string>
    <string name="floating_notification_question">Q : 为什么授予通知权限后不会弹出悬浮通知？</string>
    <string name="floating_notification_answer">A : 部分定制安卓系统修改了通知发送逻辑，只允许部分经过厂商验证的应用发送悬浮通知。您可以尝试长按应用图标进入应用设置界面，在通知设置中手动为特定通知渠道允许发送悬浮通知。</string>
    <string name="power_consumption_question">Q : APP在后台运行时会特别耗电吗？</string>
    <string name="power_consumption_answer">A : 本APP十分注重性能优化，没有太多需要后台运行的功能，对性能的开销并不算太大，而且在后续的更新中作者也会持续优化旧功能的性能。</string>
    <string name="ad_integration_question">Q : 作者会为APP接入广告吗？</string>
    <string name="ad_integration_answer">A : 就目前的看法来说，不会。这个APP只是我做出来练手的，一开始也只想给自己用，而且我非常讨厌APP里面塞各种牛皮癣广告，也并不希望像某些APP一样随意收集个人信息，因此我并不打算接入广告，也算坚守某种初心吧？</string>
    <string name="data_save_question">Q : 我在使用过程中产生的数据存放在哪里，我要如何迁移这些数据？</string>
    <string name="data_save_answer">A : 您在使用过程中产生的所有数据都保存在本地，不会上传至互联网。如果您需要迁移应用数据，请前往数据管理界面导出您需要的数据。</string>
    <string name="update_question">Q : 我要如何更新软件版本？</string>
    <string name="update_answer">A : 您可以直接访问项目仓库，从发行版(Release)中下载安装包。更推荐的方式是通过APP内的更新检测功能，APP会自动从仓库中下载最新版安装包，下载完成后点击立刻更新即可安装新版本。部分用户可能在安装时出现问题，此时您可以尝试进入手机上的文件管理应用，进入Downloads文件夹并手动安装新版本。</string>
    <string name="privacy_data_question">Q : APP会收集隐私数据吗？</string>
    <string name="privacy_data_answer">A : 本APP不收集任何数据，且使用过程中产生的所有数据都仅保存到本地，您无需担心任何隐私泄露问题。</string>

    <string-array name="tips_array">
        <item>长按添加日记按钮可以补写日记。</item>
        <item>长按某条搜索历史可以删除它。</item>
        <item>为了让软件能在后台正常运行，强烈建议授予自启动权限并忽略电池优化。</item>
        <item>如果设置了自动备份目录，进行软件更新时会自动备份一次。</item>
        <item>读日记界面点击搜索匹配项计数文本可以直接输入想要跳转到的位置。</item>
        <item>在数据统计界面点击记忆像素可以查看当天的日记信息。</item>
        <item>本APP只有更新检测需要联网，其他功能完全基于本地运行。</item>
        <item>分享日记多选时可以长按并拖动实现快速框选。</item>
        <item>读日记界面可以用空格隔开多个关键词实现多词搜索</item>
        <item>Android 12开始能够根据壁纸颜色动态生成配色方案，当然您也可以在设置界面切换成静态色彩。</item>
        <item>如果您喜欢这款APP，能麻烦您前往“设置-关于软件-项目地址”为我的项目点一个⭐吗？</item>

        <item>手握两把锟斤拷，口中直呼烫烫烫……</item>
        <item>你说得对，但Material You是由谷歌推出的一套全新动态设计语言系统……</item>
        <item>APP图标中的物品是《空洞骑士》中的收集品，叫做“漫游者日记”。</item>
        <item>何意味是什么意思？</item>
        <item>The system has been destroyed!</item>
        <item>老婆饼没有老婆，“小而美”也不小而美😡</item>
        <item>先有鸡还是先有蛋？先有编译器还是先有代码？🤔</item>
        <item>好！把他们上市！</item>
        <item>我忘记了所有悲剧，看到的都是奇迹……</item>
    </string-array>
    <string-array name="xiaomi_tips">
        <item>两行干碎一加魂，长官我是小米人。</item>
        <item>2026年3月8被戏称为“小米解锁节”。</item>
        <item>Are you OK?</item>
        <item>你知道吗？只有小米可以直接跳转自启动界面。</item>
        <item>小米超级岛(×)金凡帮你岛(√)</item>
        <item>System UI未响应……</item>
        <item>雷军！金凡！</item>
        <item>你是哪个17 Pro Max？</item>
        <item>这™绝对是来捣乱的！</item>
        <item>快去问问小爱同学“雷军怎么叫”。</item>
    </string-array>
</resources>