<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.role.RoleInputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/CollapsingToolbarLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/add_role">

                <ImageButton
                    android:id="@+id/confirm_button"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/confirm_btn"
                    android:src="@drawable/outline_check_24" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- 名称 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:helperText="@string/role_name_helper">

                <requestFocus />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 显示名称 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/display_name_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                app:helperText="@string/role_display_name_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/display_name_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 身份 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/identity_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identity"
                app:helperText="@string/role_identity_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/identity_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 印象 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/impression_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/impression"
                app:helperText="@string/role_impression_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/impression_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 关系 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/relationship_layout"
                style="@style/DropdownMenuTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/relationship"
                app:helperText="@string/role_relationship_helper">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/relationship_input"
                    style="@style/UneditableAutoCompleteTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 添加别名 Chip -->
            <com.google.android.material.chip.Chip
                android:id="@+id/add_alia_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_alia" />

            <!-- 别名列表 -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alia_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>