<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_media_files"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_via_camera"
        style="@style/ClickableTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_photo_camera_24"
        android:text="@string/add_picture_via_camera" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_via_album"
        style="@style/ClickableTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_photo_24"
        android:text="@string/add_picture_via_album" />
</LinearLayout>