<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.role.RoleInputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/CollapsingToolbarLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/add_life_note">

                <ImageButton
                    android:id="@+id/confirm_button"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/confirm_btn"
                    android:src="@drawable/outline_check_24" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- 洞见 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insight_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/life_note_insight"
                app:helperText="@string/life_note_insight_helper">

                <requestFocus />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insight_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 阐述 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/elaboration_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/life_note_elaboration"
                app:helperText="@string/life_note_elaboration_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/elaboration_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/input_history_divider"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.MaterialDivider"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/modify_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/modify_history_record"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <!-- 修改历史列表 -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginEnd="-10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>